# serde_binary_adv

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-Apache.md  LICENSE-MIT.md  LICENSE.md  README.md  SECURITY.md  coverage.sh  deny.toml  rust-toolchain.toml  rustfmt.toml  watch_coverage.sh
.cargo/: config.toml
.github/workflows/: codeql.yml  rust.yml
lowlevel-types/: Cargo.toml  README.md
lowlevel-types/src/: ascii.rs  lib.rs
lowlevel-types/src/ascii/: achar.rs  astring.rs  char.rs  error.rs  fixedlengthstring.rs
src/: lib.rs  serde_binary_adv.rs  serdebinaryadv.rs
src/serde_binary_adv/: binaryerror.rs  common.rs  de.rs  ser.rs  stream.rs
src/serde_binary_adv/stream/: de.rs  ser.rs
src/serdebinaryadv/: bytes.rs  common.rs  de.rs  error.rs  options.rs  ser.rs
